<resources>
    <string name="token_client_id">670656482899-cphg9okaoqpq92hb7a3no7p7r2af08vv.apps.googleusercontent.com</string>
    <string name="facebook_app_id">343436973175195</string>
    <string name="fb_login_protocol_scheme">fb343436973175195</string>
    <string name="app_name">Stack Exchange</string>
    <string name="btn_googlesignup">Sign in with Google</string>
    <string name="or">or</string>
    <string name="ok">OK</string>
    <string name="btn_fblogin">Log in with Facebook</string>
    <string name="btn_selogin">Log in with Stack Exchange</string>
    <string name="btn_openidlogin">Log in with OpenID</string>
    <string name="error_openid">Login with OpenID is maintaining!</string>
    <string name="error_openid2">Please wait for next update!</string>
    <string name="btn_loginupercase">LOG IN</string>
    <string name="btn_loginlowercase">Login</string>
    <string name="btn_signupupercase">SIGN UP</string>
    <string name="btn_signuplowercase">Sign up</string>
    <string name="btn_guestlogin">Start using without an account...</string>
    <string name="btn_fbsignup">Sign up with Facebook</string>
    <string name="btn_sesignup">Sign up with Stack Exchange</string>
    <string name="signup_policy">By signing up, you agree to the</string>
    <string name="policy"><u>privacy policy</u></string>
    <string name="terms"><u>terms of service.</u></string>
    <string name="and"> and </string>
    <string name="etHint_sesignupEmail">Email Address</string>
    <string name="etHint_sesignupName">Your Name (optional)</string>
    <string name="etHint_sesignupPass">Password</string>
    <string name="etHint_sesignupRePass">Password (again)</string>
    <string name="btn_sesignupCreate">Create an Stack Exchange Account</string>
    <string name="tv_sedialog">Login with Stack Exchange</string>
    <string name="login">LOGIN</string>
    <string name="tv_navHomeLogin">Sign up or log in</string>
    <string name="tv_navHomeYourSite">YOUR SITES</string>
    <string name="tv_navHomeEdit">EDIT</string>
    <string name="tv_navHomeOther">OTHER</string>
    <string name="tv_navHomeAbout">About</string>
    <string name="tv_navHomeSetting">Setting</string>
    <string name="tv_homeTitleStackOver">Stack Overflow</string>
    <string name="tv_dialogTitleQuestion">Questions</string>
    <string name="tv_dialogTitleTag">Tags</string>
    <string name="tv_dialogTitleUser">Users</string>
    <string name="tv_homeDialogMainSite">Main sites</string>
    <string name="tv_homeDialogActiveQuestion">Active questions</string>
    <string name="tv_navHomeAllSite">All Site</string>
    <string name="Questions">Questions</string>
    <string name="Tags">Tags</string>
    <string name="Users">Users</string>
    <string name="Email_used">Email already in use</string>
    <string name="FB_registed">Email already registed</string>
    <string name="FB_registedDetail">You already have a Stack Exchange account with this email address. Would you like to log in instead?</string>
    <string name="cancel">CANCEL</string>
    <string name="tv_navHomeMap">Location Map</string>
    <string name="tv_connectionError">No internet connection</string>
    <string name="search_location">Search place in current location ...</string>
    <string name="google_maps_key">AIzaSyBBvCBjxq0IkaLq47xpb2LulkI4171faKQ</string>
    <string name="connectionError">A connection to the internet is required.</string>
    <string name="connectionError2">Please try again after establishing an internet connection.</string>
    <string name="direction">DIRECTION</string>
    <string name="savelocation">Save Location</string>
    <string name="typenamelocation">Type your name location</string>
    <string name="yourchooselist">Selected Location</string>
    <string name="yourtrackinglist">Tracked way</string>
    <string name="location">Location</string>
    <string name="way">Tracked way</string>

</resources>
