<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg__beginscreen"
    android:id="@+id/frsignup_clse">
    <include layout="@layout/titlebar_login" android:id="@+id/frsignup_titlebarse">
    </include>
    <EditText
        android:id="@+id/frsignup_etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:hint="@string/etHint_sesignupEmail"
        android:textColor="@color/colorDark"
        android:padding="@dimen/_7sdp"
        android:singleLine="true"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/frsignup_titlebarse"
        android:background="@drawable/view_etloginstackexchange"/>
    <EditText
        android:id="@+id/frsignup_etName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:hint="@string/etHint_sesignupName"
        android:padding="@dimen/_7sdp"
        android:singleLine="true"
        android:textColor="@color/colorDark"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/frsignup_etEmail"
        android:background="@drawable/view_etloginstackexchange"/>
    <EditText
        android:id="@+id/frsignup_etPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:hint="@string/etHint_sesignupPass"
        android:padding="@dimen/_7sdp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/colorDark"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/frsignup_etName"
        android:background="@drawable/view_etloginstackexchange"/>
    <EditText
        android:id="@+id/frsignup_etRePass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:hint="@string/etHint_sesignupRePass"
        android:padding="@dimen/_7sdp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:textColor="@color/colorDark"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/frsignup_etPass"
        android:background="@drawable/view_etloginstackexchange"/>
    <TextView
        android:id="@+id/frsignup_btnCreate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/colorWhite"
        android:text="@string/btn_sesignupCreate"
        android:background="@drawable/view_btnlogin"
        android:layout_marginHorizontal="@dimen/_7sdp"/>
</android.support.constraint.ConstraintLayout>