<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="@dimen/_130sdp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/dialogsavechoose_tv"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/savelocation"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialogsavechoose_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:hint="@string/typenamelocation"
        android:paddingLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textColorHint="@color/colorDarkWhite"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogsavechoose_tv"></EditText>

    <TextView
        android:id="@+id/dialogsavechoose_btnOK"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogsavechoose_et" />

    <TextView
        android:id="@+id/dialogsavechoose_btnCancel"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/dialogsavechoose_btnOK"
        app:layout_constraintTop_toBottomOf="@+id/dialogsavechoose_et" />
</android.support.constraint.ConstraintLayout>