<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="@dimen/_160sdp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/dialogloginse_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:text="@string/tv_sedialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:id="@+id/dialogloginse_fretEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dialogloginse_tv"
        android:paddingHorizontal="@dimen/_10sdp">
        <EditText
            android:maxLines="1"
            android:id="@+id/dialogloginse_etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/etHint_sesignupEmail"
            android:padding="@dimen/_7sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/view_etloginstackexchange"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogloginse_fretPass"
        app:layout_constraintTop_toBottomOf="@+id/dialogloginse_fretEmail"
        android:paddingHorizontal="@dimen/_10sdp">
        <EditText
            android:inputType="textPassword"
            android:maxLines="1"
            android:id="@+id/dialogloginse_etPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/etHint_sesignupPass"
            android:padding="@dimen/_7sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/view_etloginstackexchange"/>
    </FrameLayout>
    <TextView
        android:id="@+id/dialogloginse_btnLogin"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_25sdp"
        android:gravity="center"
        android:text="@string/login"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogloginse_fretPass"
        android:background="?selectableItemBackground"/>
</android.support.constraint.ConstraintLayout>