<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/actLogin_clContent"
    android:background="@drawable/bg__beginscreen"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.android.quyentraining.activities.login.LoginActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.3">
        <ImageView
            android:id="@+id/actLogin_imv"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            ></ImageView>

        <TextView
            android:id="@+id/actLogin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actLogin_imv" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.7"
        android:background="@color/colorFooter">
        <TextView
            android:id="@+id/actLogin_btnsignup"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/view_btnlogin"
            android:text="@string/btn_signupupercase"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/actLogin_btnlogin"
            android:background="@drawable/view_btnlogin"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_loginupercase"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/actLogin_btnguestlogin"
            android:text="@string/btn_guestlogin"
            android:textColor="@color/colorDarkWhite"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actLogin_btnlogin"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>