<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg__beginscreen"
    tools:context=".fragments.signup.SignUpFragment">

    <include layout="@layout/titlebar_login" android:id="@+id/frsignup_titlebar">
    </include>
    <TextView
        android:visibility="gone"
        android:id="@+id/notifyLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:background="@color/colorRed"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        android:text="@string/Email_used"
        android:gravity="center"
        android:textColor="@color/colorWhite"/>
    <ImageView
        android:id="@+id/frsignup_titleImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/splash_screen_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frsignup_titlebar"></ImageView>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/frsignup_btnsignupgoogle"
        android:layout_width="150dp"
        android:clickable="true"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frsignup_titleImage">
    </com.google.android.gms.common.SignInButton>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/frsignup_btnsignupfb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_41sdp"
        android:background="@drawable/view_btnsignuplogin"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frsignup_btnsignupgoogle">

        <ImageView
            android:id="@+id/ic_btnsignupfb"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_facebook_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_btnsignupfb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/btn_fbsignup"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ic_btnsignupfb"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/frsignup_btnsignupse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_41sdp"
        android:background="@drawable/view_btnsignuplogin"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frsignup_btnsignupfb">

        <ImageView
            android:id="@+id/ic_btnsignupse"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_btnsignupse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/btn_sesignup"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ic_btnsignupse"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:textSize="@dimen/_10sdp"
            android:text="@string/signup_policy"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frsignup_tvlinkpolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_3sdp"
            android:text="@string/policy"
            android:textColor="@color/colorLink"
            android:textSize="@dimen/_10sdp"
            android:linksClickable="true"
            android:clickable="true"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/and"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@+id/frsignup_tvlinkpolicy"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frsignup_tvlinkterm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="@dimen/_10sdp"
            android:linksClickable="true"
            android:clickable="true"
            android:textColor="@color/colorLink"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>