<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment"
    android:background="@drawable/bg__beginscreen">
    <include layout="@layout/titlebar_login" android:id="@+id/signup_titlebar">
    </include>
    <ImageView
        android:id="@+id/frlogin_titleImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/splash_screen_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_titlebar"></ImageView>
    <com.google.android.gms.common.SignInButton
        android:id="@+id/frlogin_sign_in_button"
        android:layout_width="150dp"
        android:clickable="true"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frlogin_titleImage" />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/frlogin_midleline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/frlogin_sign_in_button">
        <ImageView
            android:id="@+id/lineleft"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="1sp"
            android:background="@color/colorDarkWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/or"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/or"
            android:textColor="@color/colorDarkWhite"
            android:textStyle="bold|italic"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toEndOf="@id/lineleft"
            app:layout_constraintEnd_toStartOf="@id/linerignt"/>
        <ImageView
            android:id="@+id/linerignt"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="1sp"
            android:background="@color/colorDarkWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/or"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/frlogin_btnloginfb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_41sdp"
        android:background="@drawable/view_btnsignuplogin"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frlogin_midleline">

        <ImageView
            android:id="@+id/ic_btnloginfb"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_facebook_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_btnloginfb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/btn_fblogin"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ic_btnloginfb"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/frlogin_btnloginse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_41sdp"
        android:background="@drawable/view_btnsignuplogin"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frlogin_btnloginfb">

        <ImageView
            android:id="@+id/ic_btnloginse"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_btnloginse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/btn_selogin"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ic_btnloginse"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/frlogin_btnloginopenid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_41sdp"
        android:background="@drawable/view_btnsignuplogin"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frlogin_btnloginse">

        <ImageView
            android:id="@+id/ic_btnloginopenid"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_openid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_btnloginopenid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/btn_openidlogin"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ic_btnloginopenid"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>